# jatuli

./: .gitignore  Cargo.toml  LICENSE  README.md  background.md  dump.sh  linker.ld  test.sh
.cargo/: config.toml
abi/: Cargo.toml
abi/src/: lib.rs
docs/: quiz.md
docs/specs/: 2026-06-06-cooperative-scheduler-design.md  2026-06-06-el0-userspace-design.md  2026-06-06-exception-handling-design.md  2026-06-06-frame-allocator-design.md  2026-06-06-gicv3-timer-design.md  2026-06-06-heap-allocator-design.md  2026-06-06-heap-on-frames-design.md  2026-06-06-hello-world-boot-design.md  2026-06-06-mmu-design.md  2026-06-06-preemption-sleep-design.md  2026-06-06-shell-console-input-design.md  2026-06-06-trap-frame-syscall-design.md  2026-06-06-userspace-elf-crate-design.md  2026-06-07-el0-fault-teardown-design.md  2026-06-07-jring-io-uring-lite-design.md  2026-06-07-kernel-input-buffer-design.md  2026-06-07-shared-abi-crate-design.md  2026-06-07-sqpoll-design.md  2026-06-07-uart-rx-irq-design.md  2026-06-07-user-task-blocking-ring-design.md  2026-06-08-multiple-programs-design.md  2026-06-08-per-process-address-spaces-design.md  2026-06-08-ring-native-spawn-design.md  2026-06-08-user-va-l0-slot-design.md
kernel/: Cargo.toml  build.rs  linker.ld
kernel/src/: allocator.rs  boot.s  elf.rs  exceptions.rs  exceptions.s  frames.rs  gic.rs  input.rs  (+12 more)
src/: allocator.rs  boot.s  exceptions.rs  exceptions.s  frames.rs  main.rs  mem.rs  mmu.rs  sched.rs  switch.s  sync.rs  syscall.rs  uart.rs  user.s
user/: Cargo.toml  build.rs  user.ld
user/src/: lib.rs  main.rs  uring.rs
(+16 files in other folders)
